Version 0.2.14 [2012-02-04]
==========================

Changes

   o Updated help files to be in line with the Google Visualisation
     API pages
   o Updated example in section "Setting options" of the package
     vignette and new section on dealing with apostrophes in
     column names
   o Fixed typos in vignette. Thanks to Pat Burns for pointing them
     out

NEW FEATURES

    o New bubble chart function gvisBubbleChart


Version 0.2.13 [2011-12-19]
==========================

Changes

    o The list of arguments for gvisGeoChart changed:
      - the argument 'numvar' has been renamed to 'colorvar' to
        reflect the updated Google API. Additionally gvisGeoChart
    	gained a new argument 'sizevar'.
    o Updated googleVis vignette with a section on using googleVis 
      output in presentations  
    o Renamed demo EventListner to EventListener

NEW FEATURES

    o Google published a new version of their Visualisation API on 7
      December 2011. Some of the new features have been implemented
      into googleVis already:
      - New stepped area chart function gvisSteppedAreaChart
      - gvisGeoChart has a new marker mode, similar to the mode in
      	gvisGeoMap. See example(gvisGeoChart) for the new
        functionalities.

Version 0.2.12 [2011-12-07]
==========================

Bug Fixes

    o gvisMotionChart didn't display data with special characters,
      e.g. spaces, &, %, in column names correctly. 
      Thanks to Alexander Holcroft for reporting this issue.

Version 0.2.11 [2011-11-16]
==========================

Changes

   o Updated vignette and documentation with instructions on changing
     the Flash security settings to display Flash charts locally. 
     Thanks to Tony Breyal.
   o New example to plot weekly data with gvisMotionChart
   o Removed local copies of gadget files to reduce package file
     size. A local copy of the R script to generate the original gadget
     files is still included in inst/gadgets 
