@@ -68,10 +68,9 @@ gvisWelcomeMessage <- function(){
   paste("\n",     
         "Welcome to googleVis version ", packageDescription("googleVis")$Version, "\n",
         "\n",
-        "Please read the Google Visualisation & Maps API Terms of Use\n",
+        "Please read the Google API Terms of Use\n",
         "before you use the package:\n",
-        "http://code.google.com/apis/visualization/terms.html,\n",
-        "http://code.google.com/apis/maps/terms.html.\n" ,
+        "http://code.google.com/apis/terms/index.html,\n",
         "\n",
         "Type ?googleVis to access the overall documentation and\n",
         "vignette('googleVis') for the package vignette.\n",
