@@ -6,10 +6,10 @@ Google Bubble Chart with R
 \description{
 
   The gvisBubbleChart function reads a data.frame and
-  creates text output referring to the Google Visualisation API which can be
+  creates text output referring to the Google Visualisation API, which can be
   included into a web page, or as a stand-alone page.
   
-  The area chart is rendered within the browser using SVG or VML and
+  The bubble chart is rendered within the browser using SVG or VML and
   displays tips when hovering over points.
 }
 \usage{
