@@ -6,7 +6,7 @@
 }
 \description{
   The gvisScatterChart function reads a data.frame and
-  creates text output referring to the Google Visualisation API which can be
+  creates text output referring to the Google Visualisation API, which can be
   included into a web page, or as a stand-alone page. The actual chart is
   rendered by the web browser using SVG or
   VML. }
