@@ -10,6 +10,8 @@ Changes
      column names
    o Fixed typos in vignette. Thanks to Pat Burns for pointing them
      out
+   o Updated links to Google's API Terms of Use:
+     http://code.google.com/apis/terms/index.html  
 
 NEW FEATURES
 
